Load entitlement agent from server